<resources>
    <string name="app_name">Wishes</string>

    <string name="accept_url_message">Please, accept URL</string>
    <string name="wish_check_error">Please, fill all the fields</string>
    <string name="url_already_added">URL is already added</string>
    <string name="page_is_loaded">Page is loaded</string>
    <string name="incorrect_url">Incorrect url</string>
    <string name="loading_failed">Loading failed</string>
    <string name="page_description">Page</string>
    <string name="url_field_hint">URL</string>
    <string name="title_field_hint">Title</string>
    <string name="target_price_field_hint">Target price</string>
    <string name="current_price_field_hint">Current price</string>
    <string name="data_is_not_recognized_error">Please, make sure, that data is recognized</string>
    <string name="accept_btn_text">Accept URL</string>
    <string name="add_btn_text">Add</string>
    <string name="apply_description">Apply</string>
    <string name="recognized_value_desc">Recognized value</string>
    <string name="percent">%</string>
    <string name="add_wish_desc">Add wish</string>
    <string name="recognized_value_unknown">Unknown</string>
    <string name="item_removed">Item removed</string>
    <string name="undo">Undo</string>

    <string name="notification_title">Price reaches the target value!</string>
    <string name="notification_title_failure">Price tracking failed!</string>
    <string name="refresh_started">Refresh started</string>

    <string name="tracker_prefs_category_title">Price tracking</string>
    <string name="tracker_frequency_title">Tracking frequency (Times a day)</string>
    <string name="tracking_frequency_summary">May increase battery usage</string>
    <string name="tracking_frequency_key">TRACKING_FREQUENCY</string>

    <string name="night_mode_category_title">Night mode</string>
    <string name="night_mode_key">NIGHT_MODE_ENABLED</string>
    <string name="night_mode_title">Night mode enabled</string>
</resources>