<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="45" />

    <gortea.jgmax.wish_list.screens.select_data_zone.view.LockedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <gortea.jgmax.wish_list.screens.select_data_zone.view.SelectableImageView
            android:id="@+id/page_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/page_description" />
    </gortea.jgmax.wish_list.screens.select_data_zone.view.LockedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controls_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.96"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/apply_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:contentDescription="@string/apply_description"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recognized_value_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:text="@string/recognized_value_desc"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/apply_fab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/apply_fab" />

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/recognized_value_desc_tv"
            app:layout_constraintStart_toEndOf="@+id/recognized_value_desc_tv"
            app:layout_constraintTop_toTopOf="@+id/recognized_value_desc_tv"
            tools:text="\???" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>