<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary">

        <Button
            android:id="@+id/reload_btn"
            style="@style/ToolbarControlsStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/toolbar_control_margin"
            app:icon="@drawable/animated_reload" />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/loading_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:progress="45" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/accept_btn"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="80dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/horizontal_margin" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/url_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/url_field_hint"
                app:layout_constraintBottom_toTopOf="@+id/title_input_layout"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/url_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/title_field_hint"
                app:layout_constraintBottom_toTopOf="@+id/target_price_input_layout"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/url_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/target_price_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/target_price_field_hint"
                app:layout_constraintBottom_toTopOf="@+id/current_price_layout"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/target_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/current_price_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/target_price_input_layout">

                <TextView
                    android:id="@+id/current_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_margin="16dp"
                    android:text="@string/current_price_field_hint"
                    android:textColor="@color/input_text_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/next_icon_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="@color/color_hint" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/url_accepted_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="title_input_layout,target_price_input_layout,current_price_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/accept_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/accept_btn_text"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>